--- a/compose.yaml
+++ b/compose.yaml
@@ -106,6 +106,11 @@ services:
       - ${API_TO_S3_HTTPS_PORT}:8081
     depends_on:
       - minio
+    environment:
+      - STORAGE__ENDPOINT=minio:9001
+      - STORAGE__BUCKETNAME=${MINIO_BUCKET_NAME}
+      - STORAGE__ACCESSKEY=${MINIO_ACCESS_KEY}
+      - STORAGE__SECRETKEY=${MINIO_SECRET_KEY}
       
 volumes:
   minio-data:
